# fastapi-quick-template

./: README.md  main.py  pyproject.toml
app/routers/auth/: auth.py
