[tool.poetry]
name = "fastapi-quick-template"
version = "0.1.0"
description = ""
authors = ["pheda <prakash@starinnovative.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "*"
annotated-types = "*"
anyio = "*"
Authlib = "*"
bcrypt = "*"
certifi = "*"
cffi = "*"
charset-normalizer = "*"
click = "*"
colorama = "*"
cryptography = "*"
dnspython = "*"
ecdsa = "*"
email_validator = "*"
fastapi = "*"
fastapi-cli = "*"
greenlet = "*"
h11 = "*"
httpcore = "*"
httptools = "*"
httpx = "*"
idna = "*"
itsdangerous = "*"
Jinja2 = "*"
Mako = "*"
markdown-it-py = "*"
MarkupSafe = "*"
mdurl = "*"
orjson = "*"
passlib = "*"
psycopg2-binary = "*"
pyasn1 = "*"
pycparser = "*"
pydantic = "*"
pydantic_core = "*"
Pygments = "*"
python-dotenv = "*"
python-jose = "*"
python-multipart = "*"
PyYAML = "*"
requests = "*"
rich = "*"
rsa = "*"
shellingham = "*"
six = "*"
sniffio = "*"
SQLAlchemy = "*"
starlette = "*"
typer = "*"
typing_extensions = "*"
ujson = "*"
urllib3 = "*"
uvicorn = "*"
watchfiles = "*"
websockets = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
